--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qmi-gps-proxy (0.0+0+df3b976-6) stretch; urgency=medium
+
+  * debian: fix service dependencies
+  * debian: add support for 4.9 kernel
+
+ -- Nicolas Dechesne <nicolas.dechesne@linaro.org>  Tue, 25 Apr 2017 22:12:09 +0200
+
 qmi-gps-proxy (0.0+0+df3b976-5) stretch; urgency=medium
 
   * debian: gps_proxy: Adding fflush when all devices are disconected.
